--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -8,7 +12,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-   --font-outfit: var(--font-outfit);
+   --font-edu-nsw-act-cursive: var(--font-edu-nsw-act-cursive);
   --font-space-grotesk: var(--font-space-grotesk);
 }
 
