--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive&display=swap');
 
 html {
   scroll-behavior: smooth;
@@ -7,12 +8,13 @@ html {
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-edu-nsw-act-cursive: 'Edu NSW ACT Cursive', cursive;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-   --font-edu-nsw-act-cursive: var(--font-edu-nsw-act-cursive);
+  --font-edu-nsw-act-cursive: var(--font-edu-nsw-act-cursive);
   --font-space-grotesk: var(--font-space-grotesk);
 }
 
